responsive con flexbox y grids

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
+/*----Estilos generales-----*/
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@100;200;500;600&display=swap');
 body{
     font-family: 'Montserrat', sans-serif;
@@ -8,31 +14,60 @@ body{
 html{
     font-size: 100%;
 }
+hr{
+    height: 1px;
+    border: 1px solid black;
+    margin: 40px;
+}
 a{
     text-decoration: none;
     color: black;
 }
-.header{
-    background-color: black;
-    /*border: 1px transparent black;  
-    height: fit-content;
-    padding: 15px;    
-    align-items: center;*/
-    
+.contenedorPrincipal__Index{
+    display: grid;
+    grid-template-areas: 
+        "header"
+        "section1"
+        "section2"
+        "section3"
+        "footer";
 }
-.header__div--nav{
-    padding: 10px;
+.contenedorPrincipal__venta{
+    display: grid;
+    grid-template-areas:         
+        "header"
+        "section"
+        "sectionCards"
+        "footer"
+}
+
+/*---Estilos header---*/
+
+.header{
+    grid-area: header;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;    
 }
 .header__div--logo{
+    margin: 10px;
     padding: 10px;
 }
-nav ul li{
-    list-style: none;
+
+.header__div--carrito{
     margin: 10px;
-    padding: 10px;    
+    padding: 10px;
+}
+nav ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;  
 }
 nav ul li a{
-    margin: 5px;
+    margin: 15px;
     padding: 15px;
     color: white;
     text-decoration: none;
@@ -41,7 +76,48 @@ nav ul li a{
     text-decoration: none;    
     text-transform: uppercase;
 }
+nav ul li a:hover{
+    color: grey;
+}
+
+/*---Estilos sections---*/
+
 .estilo__seccion{
+    grid-area: section;
+    height: fit-content;
+    background-color: gray;
+    padding: 100px;
+    margin: 0px;
+    text-align: center;
+    text-decoration: none;
+}
+.estilo__seccion1{
+    grid-area: section1;
+    grid-row: 2/3;
+    align-items: center;
+    height: fit-content;
+    background-color: gray;
+    padding: 100px;
+    margin: 0px;
+    text-align: center;
+    text-decoration: none;
+}
+.estilo__seccion2{
+    grid-area: section2;
+    grid-row: 3/4;
+    align-items: center;
+    height: fit-content;
+    background-color: gray;
+    padding: 100px;
+    margin: 0px;
+    text-align: center;
+    text-decoration: none;
+}
+.estilo__seccion3{
+    grid-area: section3;
+    grid-row: 4/5;
+    align-items: center;
+    height: fit-content;
     background-color: gray;
     padding: 100px;
     margin: 0px;
@@ -49,10 +125,22 @@ nav ul li a{
     text-decoration: none;
 }
 .estilo__contacto{
+    height: fit-content;
     padding: 15px;
     margin: auto;
     text-align: center;
+    display: block;
     font-weight: bold;
+}
+.contenedor__cards{
+    grid-area: sectionCards;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: fit-content;
+    background-color: gray;
+    text-align: center;
+    text-decoration: none;
 }
 .ventaMotos__card{
     display: block;
@@ -65,7 +153,18 @@ nav ul li a{
     background-color: black;
     color: white;
 }
+.estilo__imagen{
+    object-fit: cover;
+}
+
+/*---Estilos Footer---*/
+
 .footer{
+    grid-area: footer;
+    grid-row: 5/6;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
     height: fit-content;
     background-color: black;    
     padding: 15px;
@@ -74,18 +173,74 @@ nav ul li a{
     color: white;
 }
 .footer__izq{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     color: white;
     padding: 15px;
-    text-align: left;
 }
 .footer__izq--a{
     text-decoration: none;
     color: white;
 }
-.footer__logo{    
+.footer__izq--a:hover{
+    text-decoration: none;
+    color: grey;
+}
+.footer__logo{ 
+    height: 150px;   
+    width: 150px;
     padding: 10px;
 }
 .footer__der{
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     padding: 15px;
+}
+
+/*---Media queris---*/
+
+/*hasta max-width 768px*/
+@media(max-width: 768px){
+    .header{
+        flex-flow: column wrap;
+        align-content: center;
+    }
+    nav ul{
+        flex-direction: column;
+        align-items: center;  
+    }
+    nav ul li a{
+        margin: 5px;
+        padding: 5px;
+    }
+    .estilo__seccion{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+    }
+    .contenedor__cards{
+        flex-direction: column;       
+    }
+    iframe{
+        width: auto;
+        height: auto;
+    }
+    .footer{
+        grid-area: footer;
+        grid-row: 5/6;
+        display: flex;
+        flex-flow: column wrap;
+        align-content: center;
+        height: fit-content;
+    }
+    .footer__izq{
+        align-items: center;
+    }
+    .footer__logo{
+        display: none;
+    }
+
 }
