--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ nav ul{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;  
+    align-items: center; 
+    list-style: none; 
 }
 nav ul li a{
     margin: 15px;
