--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,83 @@ video {
     width: 100%;
     height: 100%;
   }
+
+/*---Clases animaciones---*/
+/**
+ * ----------------------------------------
+ * animation tilt-in-fwd-tr
+ * ----------------------------------------
+ */ 
+.tilt-in-fwd-tr {
+	-webkit-animation: tilt-in-fwd-tr 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3s both;
+	        animation: tilt-in-fwd-tr 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3s both;
+}
+@-webkit-keyframes tilt-in-fwd-tr {
+        0% {
+            -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+            transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+            opacity: 0;
+        }
+        100% {
+            -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+            transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+            opacity: 1;
+        }
+    }
+@keyframes tilt-in-fwd-tr {
+        0% {
+            -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+            transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+            opacity: 0;
+        }
+        100% {
+            -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+            transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+            opacity: 1;
+        }
+    }
+/**
+ * ----------------------------------------
+ * animation puff-in-center
+ * ----------------------------------------
+ */
+.puff-in-center {
+	-webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) 3s both;
+	        animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) 3s both;
+}
+@-webkit-keyframes puff-in-center {
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+@keyframes puff-in-center {
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  
 /*---Estilos Footer---*/
 
 .footer{
