--- a/scss/_headerNav.scss
+++ b/scss/_headerNav.scss
@@ -7,9 +7,7 @@
 }
 
 nav ul{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    @extend .header;
     align-items: center; 
     list-style: none; 
         li a{
