agregado mixin en _estilosGenerales.scss y se utiliza en _footer.scss

--- a/scss/_estilosGenerales.scss
+++ b/scss/_estilosGenerales.scss
@@ -22,3 +22,7 @@ a{
     text-align: center;
     text-decoration: none;
 }
+@mixin imgFormat($ancho, $alto){
+    width: $ancho;
+    height: $alto;
+}
